syntax = "proto3";
package configpb;

message Config{
    ConsensusConfig consensusConfig = 1;
    NodeConfig      nodeConfig = 2;
}

message ConsensusConfig{
    string minerAddr = 1;
    string privKey = 2;
}

message NodeConfig{
    uint32 port = 1;
    string seed = 2;
    string dbPath = 3;
    uint32 rpcPort = 4;
    string keyPath = 5;
}

message DynastyConfig{
    repeated string producers =1;
}

message CliConfig{
    uint32 port = 1;
    string password = 2;
}